syntax = "proto3";

package statistics;
import "google/protobuf/struct.proto";

option go_package = "./server/proto/";

service StatisticsService {
    rpc AnalyzeDescriptiveStatistics(StatisticsRequest) returns (StatisticsDescriptiveResponse);
    rpc AnalyzeInferentialStatistics(InferentialStatisticsRequest) returns (AnyhowResponse);
    rpc AnalyzeTimeSeriesStatistics(TimeSeriesAnalysisRequest) returns (AnyhowResponse);
}

message StatisticsDataType {
    string row = 1;
    repeated float values = 2;
}

message StatisticsRequest {
    repeated StatisticsDataType data = 1;
    repeated string methods = 2;
}

message InferentialStatisticsRequest {
    repeated StatisticsDataType data = 1;
    repeated string methods = 2;
    google.protobuf.Struct if_specific = 3;
}

message TimeSeriesAnalysisRequest {
    repeated StatisticsDataType data = 1;
    repeated string methods = 2;
    google.protobuf.Struct ts_specific = 3;
}

message StatisticsDescriptiveResponse {
    string result = 1;
}

message AnyhowResponse {
    google.protobuf.Struct result = 1;
}